# context-rag

./: .context-rag.config.json  .gitignore  AGENTS-AUTO-DISCOVERY.md  AGENTS-SIMPLE.md  AGENTS-TEMPLATE.md  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
docs/: api.md  beginner-tutorial.md  cheat-sheet.md  configuration.md  embeddings-explained.md  expanded-search.md  installation.md  plugins.md  quick-start.md
plugins/context-rag-plugin-openai/: index.js  package.json
plugins/context-rag-plugin-rustbert/: index.js  package.json
python/: embedder.py  fast_embedder.py  requirements.txt
src/: index.js  main.rs
src/cli/: ai.js  branch.js  index.js  init.js  plugins.js  query.js  status.js  switch.js  watch.js
src/indexer/: mod.rs
src/services/: api.js  branch-cache-manager.js  config.js  context-indexer.js  context-monitor.js  context.js  embedder.js  expanded-search.js  expansion.js  git.js  handoff-ai.js  indexer.js  merger.js  plugins.js  project-context-indexer.js  search.js  summarization.js  watcher.js
src/utils/: silent-mode.js
test/: clean-output.test.js  config.test.js  indexer.test.js  plugins.test.js  search.test.js  simple-test-runner.js
test-clean-output/: .context-rag.config.json
test-rust-scenario/: .context-rag.config.json
test-structured-output/: .context-rag.config.json
test-structured-output/.context-rag/: tool-info.json
test/integration/: branch-cache.test.js  (+1 more)
tools/: README.md  context-efficiency.js  interactive-tutorial.js  quick-benchmark.sh  token-benchmark.js  token-tracker.js
(+1 files in other folders)
