[package]
name = "context-rag-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "context-rag-embedder"
path = "src/main.rs"

[lib]
name = "context_rag_indexer"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]